# project-fuse

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  WITNESS_SPIKE.md  WITNESS_SPIKE_PHASE2_RESULTS.md  about.md  timeline.md
.github/workflows/: fuzz.yml
docs/: ARCHITECTURE.md  EXTERNAL_AUDIT_OPTIONS.md  FUZZING.md  IMPLEMENTATION_STATUS.md  PHASE1_COMPLETION.md  PHASE1_MILESTONE.md  PHASE1_STATUS.md  QUICKSTART.md  SECURITY_AUDIT.md  SECURITY_REVIEW.md  TESTING.md
examples/: demo-c2pa-selective-disclosure.sh
examples/demo/: README.md
examples/specs/: c2pa-signature-verification.json  ed25519-signature-verification.json
examples/systems/: c2pa-test-data-large.json
fuse-checkers/: Cargo.toml  README.md
fuse-checkers/src/: c2pa.rs  lib.rs
fuse-cli/: Cargo.toml
fuse-cli/src/: c2pa.rs
fuse-core/: Cargo.toml  README.md  build.rs
fuse-core/src/: envelope.rs  error.rs  lib.rs  proof.rs  spec.rs  zkvm.rs
fuse-core/tests/: c2pa_integration.rs
fuse-core/tests/common/: fixtures.rs
fuse-guest/: Cargo.toml
fuse-guest/src/: checker.rs  lib.rs  main.rs
fuse-guest/src/checkers/: c2pa.rs  gdpr.rs  ml_model.rs  mod.rs  soc2.rs  supply_chain.rs
fuzz/: Cargo.toml  borsh_decode.rs  c2pa_parser.rs  canonicalize_json.rs  ed25519_verification.rs  spec_validation.rs
fuzz/fuzz_targets/: borsh_decode.rs  c2pa_parser.rs  canonicalize_json.rs  ed25519_verification.rs  lib.rs  spec_validation.rs
scripts/: gpu-preflight-check.sh  gpu-setup-fix.sh  security-audit.sh
specs/: README.md  VCE_SPECIFICATION_V0.1.md
specs/schemas/: compliance-spec-schema.json  vce-schema.json
tests/: zkvm_proofs.rs
tests/common/: mod.rs
tests/integration/: checkers.rs  zkvm_proofs.rs
