[package]
name = "fuse-guest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fuse_guest"
path = "src/lib.rs"

# Guest program binary for RISC Zero zkVM
[[bin]]
name = "fuse-guest"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "1.0", default-features = false }
risc0-zkvm-platform = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

