[package]
name = "fuse-fuzz"
version = "0.0.0"
authors = ["FUSE Fuzzing"]
edition = "2021"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fuse-core = { path = "../fuse-core" }
fuse-cli = { path = "../fuse-cli" }
fuse-checkers = { path = "../fuse-checkers" }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"
chrono = "0.4"

[[bin]]
name = "canonicalize_json"
path = "canonicalize_json.rs"

[[bin]]
name = "c2pa_parser"
path = "c2pa_parser.rs"

[[bin]]
name = "ed25519_verification"
path = "ed25519_verification.rs"

[[bin]]
name = "spec_validation"
path = "spec_validation.rs"

[[bin]]
name = "borsh_decode"
path = "borsh_decode.rs"
